<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To Do List</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="title_activity_singleitem_dialog">Singleitem_dialog</string>
    <string name="done">Done</string>
    <string name="archiveall">Archive All</string>
    <string name="deleteall">Delete All</string>
    <string name="email">Email Task</string>
    <string name="restoreall">Restore All</string>
	<string name="stats">Statistics</string>
	<string name="email_selection">Email Selection</string>
</resources>
